@@ -4,6 +4,7 @@ X-editable changelog
 
 Version 1.4.0 wip
 ----------------------------
+[enh] jquery-ui datepicker excluded from `plain` jquery build (vitalets) 
 [enh] added new input type: combodate (vitalets) 
 [bug #68] allow arrays for data attributes (adimitrov) 
 [enh] setValue method updates input if form is open (vitalets) 
